unpackaged/main/default/objects/Customization__c/Customization__c.object-meta.xml
<CustomObject>
    <label>Customization</label>
    <nameField>
        <label>Customization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>