unpackaged/main/default/objects/Customization__c/fields/Advisor_Group__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Advisor_Group__c</referenceTo>
    <relationshipLabel>Customizations</relationshipLabel>
    <relationshipName>Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>