unpackaged/main/default/objects/Customization__c/fields/User_Who_Approved_Customization__c.field-meta.xml
<CustomField>
    <fullName>User_Who_Approved_Customization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Who Approved Customization</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>